--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -1,14 +1,18 @@
 .search {
   text-align: center;
   text-transform: uppercase;
-  padding: 30px 20px;
+  line-height: 24px;
+  padding: 32px 20px 50px;
 
   @media (min-width: @tablet-width) {
-    padding: 50px 155px;
+    padding: 55px 155px 59px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 65px 370px;
+    padding-top: 55px;
+    padding-bottom: 67px;
+    padding-left: 370px;
+    padding-right: 370px;
   }
 }
 
@@ -16,20 +20,42 @@
   font-size: 21px;
   font-weight: 700;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 21px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 26px;
+    margin-bottom: 33px;
+  }
 }
 
 .search__description {
   font-size: 14px;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 38px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 43px;
+  }
+
+  br {
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: inline;
+    }
+  }
 }
 
 .search__button {
   display: inline-block;
   text-decoration: none;
   width: 100%;
-  padding: 15px 0;
+  padding: 16px 0;
 
   &:hover {
     background-color: @mid-blue;
