--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,9 +1,3 @@
-.social {
-  @media (max-width: @tablet-width) {
-    padding: 15px 0;
-  }
-}
-
 .social__list {
   display: flex;
   flex-wrap: wrap;
@@ -11,6 +5,10 @@
   list-style: none;
   padding: 0;
   margin: 0 auto;
+
+  @media (max-width: @mobile-width-only) {
+    padding: 17px 0;
+  }
 }
 
 .social__link {
