--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,11 +1,13 @@
 .contacts {
   text-transform: uppercase;
+  text-align: center;
   font-weight: 700;
   font-size: 21px;
+  padding: 15px 0;
 
-  @media (max-width: @mobile-width-only) {
-    text-align: center;
-    padding: 15px 0;
+  @media (min-width: @tablet-width) {
+    text-align: left;
+    padding: 0;
   }
 }
 
