--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,13 +1,14 @@
 .copyright {
-  justify-content: flex-end;
+  justify-content: center;
   font-size: 14px;
   line-height: 26px;
   text-transform: uppercase;
   display: flex;
+  padding: 24px 0;
 
-  @media (max-width: @mobile-width-only) {
-    justify-content: center;
-    padding: 24px 0;
+  @media (min-width: @tablet-width) {
+    justify-content: flex-end;
+    padding: 0;
   }
 
   @media (min-width: @tablet-width) {
