--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -15,7 +15,6 @@
   font-weight: 700;
 
   @media (min-width: @tablet-width) {
-    display: flex;
     justify-content: space-between;
   }
 
@@ -65,25 +64,13 @@
 
   &--left {
     @media (min-width: @tablet-width) {
-      text-align: left;
-      padding-left: 29px;
       margin-right: auto;
-    }
-
-    @media (min-width: @desktop-width) {
-      padding-left: 70px;
     }
   }
 
   &--right {
     @media (min-width: @tablet-width) {
-      text-align: right;
-      padding-right: 21px;
       margin-left: auto;
-    }
-
-    @media (min-width: @desktop-width) {
-      padding-right: 67px;
     }
   }
 }
@@ -183,8 +170,10 @@
   }
 
   .main-nav__list {
-    @media (max-width: @mobile-width-only) {
-      display: none;
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: flex;
     }
   }
 }
