--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -14,27 +14,33 @@
 
   &--photo {
     line-height: 24px;
-    padding: 12px 15px 30px;
+    padding-top: 14px;
+    padding-bottom: 30px;
 
     @media (min-width: @tablet-width) {
-      padding: 52px 161px;
+      padding-top: 50px;
+      padding-bottom: 55px;
     }
 
     @media (min-width: @desktop-width) {
-      padding: 75px 377px 37px;
+      padding-top: 45px;
+      padding-bottom: 39px;
     }
   }
 
   &--review {
     line-height: 24px;
-    padding: 17px 14px;
+    padding-top: 17px;
+    padding-bottom: 17px;
 
     @media (min-width: @tablet-width) {
-      padding: 45px 162px;
+      padding-top: 48px;
+      padding-bottom: 50px;
     }
 
     @media (min-width: @desktop-width) {
-      padding: 50px 380px 0;
+      padding-top: 57px;
+      padding-bottom: 4px;
     }
   }
 }
@@ -49,7 +55,7 @@
 
   @media (min-width: @tablet-width) {
     font-size: 21px;
-    margin-top: 10px;
+    margin-top: 14px;
   }
 
   @media (min-width: @desktop-width) {
@@ -57,31 +63,14 @@
   }
 
   &--photo {
-    margin-top: 19px;
-    margin-bottom: 30px;
-
     @media (min-width: @tablet-width) {
       font-size: 30px;
-      margin-top: 12px;
-      margin-bottom: 33px;
-    }
-
-    @media (min-width: @desktop-width) {
-      margin-top: 25px;
     }
   }
 
   &--review {
-    margin-top: 18px;
-    margin-bottom: 28px;
-
     @media (min-width: @tablet-width) {
       font-size: 30px;
-      margin-bottom: 33px;
-    }
-
-    @media (min-width: @desktop-width) {
-      margin-top: 63px;
     }
   }
 }
@@ -96,5 +85,17 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 43px;
+  }
+
+  &--photo {
+    @media (min-width: @tablet-width) {
+      padding: 0 41px;
+    }
+  }
+
+  &--review {
+    @media (min-width: @tablet-width) {
+      padding: 0 41px;
+    }
   }
 }
