--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -3,11 +3,11 @@
   flex-wrap: wrap;
   justify-content: center;
   list-style: none;
-  padding: 0;
+  padding: 17px 0;
   margin: 0 auto;
 
-  @media (max-width: @mobile-width-only) {
-    padding: 17px 0;
+  @media (min-width: @tablet-width) {
+    padding: 0;
   }
 }
 
