--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -40,3 +40,10 @@
     background-repeat: no-repeat;
   }
 }
+
+.map__frame {
+  display: block;
+  width: 100%;
+  height: 350px;
+  border: none;
+}
